# nitrobox

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  adl-seccomp  build.rs  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  scorecard.yml  test.yml
dev/: landlock_plan.md  run.py
dev/support/: README.md  osworld.md  osworld_results.json  tb2.md
docs/: blog.md  development.md  improve.md  quick_start.md  skyrl_integration_test.md  userns_skyrl_fixes.md
docs/hooks/: fix_links.py
examples/: basic_usage.py  bench_dt.py  bench_dt_nollm.py  bench_harbor_e2e.py  bench_osworld_concurrent.py  bench_osworld_e2e.py  bench_r2egym_e2e.py  bench_swebench.py  benchmark.md  benchmark.py  benchmark_breakdown.py  concurrent_sandboxes.py
examples/results/: README.md  osworld.md  r2egym.md  swebench_verified.md  tb2.md
go/: go.mod  go.sum  libnitrobox.h
go/cmd/nitrobox-core/: main.go
go/cshared/: exports.go
go/internal/buildkit/: handler.go  server.go
go/internal/image/: storage.go
go/internal/nsenter/: nsenter_cgo.go
go/internal/sandbox/: config.go  spawn.go
go/internal/security/: caps.go  landlock.go  seccomp.go
go/internal/unpack/: extract.go
jobs/test_nitrobox2/: config.json  result.json
rust/src/: cgroup.rs  init.rs  lib.rs  mount.rs  pidfd.rs  qmp.rs  security.rs  unpack.rs  userns.rs  whiteout.rs
src/agentdocker_lite/: __init__.py  __main__.py  _base.py  _core.pyi  _landlock.py  _mount.py  _namespace.py  _pidfd.py  _shell.py  checkpoint.py  cli.py  compose.py  config.py  rootfs.py  sandbox.py  security.py  vm.py
src/lite_sandbox/: __init__.py  rootfs.py  sandbox.py
src/nitrobox/: _go_core.py  _shell.py  checkpoint.py  cli.py  config.py  rootfs.py  sandbox.py  vm.py
tests/: test_buildkit.py  test_checkpoint.py  test_cli.py  test_compose.py  test_harbor_sim.py  test_registry.py  test_rust_core.py  test_sandbox.py  test_security.py  test_vm.py
(+18 files in other folders)
